# pi_interfaces

mifare-attack-toolkit/: Cargo.toml  README.md
mifare-attack-toolkit/src/: attack_manager.rs  card_detection.rs  crypto1.rs  main.rs  mfrc522.rs  mifare_attack_manager.rs  reader_adapter.rs  utils.rs
mifare-attack-toolkit/src/attacks/: darkside.rs  default_keys.rs  mod.rs  nested.rs
mifare-attack-toolkit/src/cards/: card_types.rs  keys.rs  magic_cards.rs  mod.rs
mifare-attack-toolkit/src/operations/: clone.rs  magic_card.rs  mod.rs  read.rs  write.rs
mifare-attack-toolkit/src/reader/: auth.rs  card_operations.rs  commands.rs  communication.rs  mfrc522.rs  mod.rs  utils.rs
mifare-attack-toolkit/src/ui/: display.rs  menu.rs  mod.rs
nfc_mifare_reader/: Cargo.toml  db.txt  hello.csv  inventory.db  m301.py  mifare_reader_config.json  update_imports.sh
pn532_project/: Cargo.toml  (+1 more)
rust-nfc-block-editor-backup/: Cargo.toml  recovered_keys.txt
rust-nfc-block-editor-backup/src/: main.rs
rust-nfc-block-editor-backup/src/lib/: mfrc522.rs  mifare.rs  ui_wrapper.rs
rust-nfc-block-editor-backup/src/lib/mfrc522/: constants.rs  operations.rs
rust-nfc-block-editor-backup/src/lib/mifare/: admin.rs  attacks.rs  block_editor.rs  dump.rs  magic_clone.rs  magic_write.rs  operations.rs
rust-nfc-block-editor-backup/src/lib/mifare/magic/: clone.rs  keygen.rs  magic.rs  mod.rs  utils.rs  write.rs
rust-nfc-block-editor-backup/src/lib/mifare/magic/detect/: activation.rs  card_tests.rs  detect_impl.rs  detect_magic_card.rs  mod.rs  types.rs  utils.rs  write_tests.rs
rust-nfc-block-editor-backup/src/lib/ui_mod/: attacks.rs  block_ops.rs  card_ops.rs  common.rs  magic_ops.rs  main_menu.rs  mod.rs  sector_ops.rs
rust-rfid-nfc-toolkit/: Cargo.toml  README.md  fix_rfid_code.sh
rust-rfid-nfc-toolkit/python/: rfid_wrapper.py
rust-rfid-nfc-toolkit/src/: lib.rs
rust-rfid-nfc-toolkit/src/rfid/: constants.rs  mfrc522.rs  mifare.rs  mod.rs  python_bridge.rs
rust-rfid-nfc-toolkit/src/ui/: app.rs  mod.rs
rust-rfid-nfc-toolkit/src/utils/: logger.rs  mod.rs
(+59 files in other folders)
